force-app/main/default/objects/TSGADX__Deal__c/TSGADX__Deal__c.object-meta.xml
<CustomObject>
    <description>All Editions - Deals</description>
    <label>Deal</label>
    <nameField>
        <label>Deal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>