force-app/main/default/objects/TSGADX__Deal__c/fields/AD_CPI_Lease_3_Tier_Color__c.field-meta.xml
<CustomField>
    <fullName>AD_CPI_Lease_3_Tier_Color__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AD CPI Lease - 3 Tier Color</label>
    <type>Checkbox</type>
</CustomField>