force-app/main/default/objects/TSGADX__Deal__c/fields/AD_Credit_App__c.field-meta.xml
<CustomField>
    <fullName>AD_Credit_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AD Credit App</label>
    <type>Checkbox</type>
</CustomField>