force-app/main/default/objects/TSGADX__Deal__c/fields/AD_Equipment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>AD_Equipment_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AD Equipment Schedule</label>
    <type>Checkbox</type>
</CustomField>