force-app/main/default/objects/TSGADX__Deal__c/fields/AD_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>AD_Sales_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AD Sales Order</label>
    <type>Checkbox</type>
</CustomField>