force-app/main/default/objects/TSGADX__Deal__c/fields/AD_Service_Agreement_3_Tier_Color__c.field-meta.xml
<CustomField>
    <fullName>AD_Service_Agreement_3_Tier_Color__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AD Service Agreement - 3 Tier Color</label>
    <type>Checkbox</type>
</CustomField>