force-app/main/default/objects/TSGADX__Deal__c/fields/AD_Service_Agreement__c.field-meta.xml
<CustomField>
    <fullName>AD_Service_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AD Service Agreement</label>
    <type>Checkbox</type>
</CustomField>