force-app/main/default/objects/TSGADX__Deal__c/fields/AD_Standard_Lease__c.field-meta.xml
<CustomField>
    <fullName>AD_Standard_Lease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AD Standard Lease</label>
    <type>Checkbox</type>
</CustomField>