force-app/main/default/objects/TSGADX__Deal__c/fields/Additional_Model_Funding__c.field-meta.xml
<CustomField>
    <fullName>Additional_Model_Funding__c</fullName>
    <formula>Funding_Difference__c / Model_Qty_Quoted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Model Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>