force-app/main/default/objects/TSGADX__Deal__c/fields/Backup_Services_MRR__c.field-meta.xml
<CustomField>
    <fullName>Backup_Services_MRR__c</fullName>
    <label>Backup Services MRR</label>
    <summarizedField>TSGCFG__Deal_Line_Items__c.TSGCFG__Total__c</summarizedField>
    <summaryFilterItems>
        <field>TSGCFG__Deal_Line_Items__c.TSGCFG__Category__c</field>
        <operation>equals</operation>
        <value>Backup Services MRR</value>
    </summaryFilterItems>
    <summaryForeignKey>TSGCFG__Deal_Line_Items__c.TSGCFG__Deal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>