force-app/main/default/objects/TSGADX__Deal__c/fields/Base_Service_Mo__c.field-meta.xml
<CustomField>
    <fullName>Base_Service_Mo__c</fullName>
    <formula>TSGCFG__Quote__r.TSGCFG__Total_Monthly_Service__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Service (Mo.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>