force-app/main/default/objects/TSGADX__Deal__c/fields/Book_Type__c.field-meta.xml
<CustomField>
    <fullName>Book_Type__c</fullName>
    <label>Book</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Book</fullName>
            </value>
            <value>
                <fullName>Out of Book</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>