force-app/main/default/objects/TSGADX__Deal__c/fields/Check_SSK_Comp__c.field-meta.xml
<CustomField>
    <fullName>Check_SSK_Comp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check SSK Comp</label>
    <type>Checkbox</type>
</CustomField>