force-app/main/default/objects/TSGADX__Deal__c/fields/Client_Workstations__c.field-meta.xml
<CustomField>
    <fullName>Client_Workstations__c</fullName>
    <inlineHelpText># of client computer for managed services coverage.</inlineHelpText>
    <label>Client Workstations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>