force-app/main/default/objects/TSGADX__Deal__c/fields/Commission_Paid__c.field-meta.xml
<CustomField>
    <fullName>Commission_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Commission has been paid from deal.</description>
    <inlineHelpText>*Dont Delete-Rohan* Check if Commission has been paid from deal.</inlineHelpText>
    <label>Commission Paid</label>
    <type>Checkbox</type>
</CustomField>