force-app/main/default/objects/TSGADX__Deal__c/fields/Comp_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Comp_Paid_Date__c</fullName>
    <description>Date the commission was paid, to be filled in by Admin.</description>
    <inlineHelpText>Date Commission was paid.</inlineHelpText>
    <label>Comp Paid Date</label>
    <type>Date</type>
</CustomField>