force-app/main/default/objects/TSGADX__Deal__c/fields/Confidence_Count__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Count__c</fullName>
    <formula>IF(Pain_Win__c = TRUE, 1, 0) + 

IF(Budget_Confirmed__c = TRUE, 1, 0) + 

IF(Decision_Maker__c = TRUE, 1, 0) + 

IF(Impending_Event__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confidence Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>