force-app/main/default/objects/TSGADX__Deal__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <formula>IF(Confidence_Count__c = 4, IMAGE(&quot;/resource/TSGADX__GreenFlag&quot;,&quot;&quot;),
IF(Confidence_Count__c &lt; 2, IMAGE(&quot;/resource/TSGADX__RedFlag&quot;,&quot;&quot;), IMAGE(&quot;/resource/TSGADX__YellowFlag&quot;,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confidence Score</label>
    <type>Text</type>
</CustomField>