force-app/main/default/objects/TSGADX__Deal__c/fields/Credit_Approval__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Approval</label>
    <type>Checkbox</type>
</CustomField>