force-app/main/default/objects/TSGADX__Deal__c/fields/Credit_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Submit_Date__c</fullName>
    <label>Credit Submit Date</label>
    <type>Date</type>
</CustomField>