force-app/main/default/objects/TSGADX__Deal__c/fields/Credit_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Credit_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Submitted</label>
    <type>Checkbox</type>
</CustomField>