force-app/main/default/objects/TSGADX__Deal__c/fields/Current_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Date_Time__c</fullName>
    <formula>DATETIMEVALUE(NOW())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current Date/Time, used for Unique Number export on Lease ESign doc.</inlineHelpText>
    <label>Current Date-Time</label>
    <type>DateTime</type>
</CustomField>