force-app/main/default/objects/TSGADX__Deal__c/fields/Current_Process__c.field-meta.xml
<CustomField>
    <fullName>Current_Process__c</fullName>
    <description>Use to record and export text in this area to proposal template.</description>
    <inlineHelpText>Use to record and export text in this area to proposal template.</inlineHelpText>
    <label>Current Process</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>