force-app/main/default/objects/TSGADX__Deal__c/fields/Current_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Current_Scenario__c</fullName>
    <label>Current Scenario</label>
    <type>TextArea</type>
</CustomField>