force-app/main/default/objects/TSGADX__Deal__c/fields/Customer_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Customer_Engagement__c</fullName>
    <description>Use to record and export text in this area to proposal template.</description>
    <inlineHelpText>Use to record and export text in this area to proposal template.</inlineHelpText>
    <label>Customer Engagement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>