force-app/main/default/objects/TSGADX__Deal__c/fields/Deal_Rate_BT__c.field-meta.xml
<CustomField>
    <fullName>Deal_Rate_BT__c</fullName>
    <formula>IF( ISPICKVAL(Book_Type__c, &apos;In Book&apos;), 0.024, 0.03)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>