force-app/main/default/objects/TSGADX__Deal__c/fields/Dealer_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Funding_Amount__c</fullName>
    <formula>TSGCFG__Equipment_Monthly_Payment__c / LRO_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>