force-app/main/default/objects/TSGADX__Deal__c/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decision Maker</label>
    <type>Checkbox</type>
</CustomField>