force-app/main/default/objects/TSGADX__Deal__c/fields/Delivery_Installation__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Installation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery-Installation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TSGADX__Installation__c.TSGADX__Business__c</field>
            <operation>equals</operation>
            <valueField>$Source.TSGADX__Company__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TSGADX__Installation__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>