force-app/main/default/objects/TSGADX__Deal__c/fields/Docuware__c.field-meta.xml
<CustomField>
    <fullName>Docuware__c</fullName>
    <description>Module components needed for the docuware project</description>
    <inlineHelpText>Select all that are required for project pricing</inlineHelpText>
    <label>Docuware</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Docuware Business Server</fullName>
            </value>
            <value>
                <fullName>Docuware Professional Server</fullName>
            </value>
            <value>
                <fullName>Docuware Enterprise Server</fullName>
            </value>
            <value>
                <fullName>Docuware Client Site License</fullName>
            </value>
            <value>
                <fullName>Docuware Web Client Read Only</fullName>
            </value>
            <value>
                <fullName>DW Smart Connect</fullName>
            </value>
            <value>
                <fullName>DW Connect to Outlook</fullName>
            </value>
            <value>
                <fullName>DW Mobile</fullName>
            </value>
            <value>
                <fullName>DW Task Manager</fullName>
            </value>
            <value>
                <fullName>DW AutoIndex</fullName>
            </value>
            <value>
                <fullName>DW Workflow Manager</fullName>
            </value>
            <value>
                <fullName>DW Barcode &amp; Forms</fullName>
            </value>
            <value>
                <fullName>DW Import</fullName>
            </value>
            <value>
                <fullName>DW Connect to Mail</fullName>
            </value>
            <value>
                <fullName>DW Intelligent Indexing</fullName>
            </value>
            <value>
                <fullName>DW Forms</fullName>
            </value>
            <value>
                <fullName>DW Connect to SAP</fullName>
            </value>
            <value>
                <fullName>DW Connect to SharePoint</fullName>
            </value>
            <value>
                <fullName>DW Connect to Ricoh</fullName>
            </value>
            <value>
                <fullName>DW Connect to Toshiba</fullName>
            </value>
            <value>
                <fullName>DW Connect to Sharp</fullName>
            </value>
            <value>
                <fullName>DW Connect to Xerox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>