force-app/main/default/objects/TSGADX__Deal__c/fields/DSA_Date__c.field-meta.xml
<CustomField>
    <fullName>DSA_Date__c</fullName>
    <label>DSA Date</label>
    <type>Date</type>
</CustomField>