force-app/main/default/objects/TSGADX__Deal__c/fields/EA_Sales_Orders__c.field-meta.xml
<CustomField>
    <fullName>EA_Sales_Orders__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EA Sales Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.TSGADX__Company__c</field>
            <operation>equals</operation>
            <valueField>SalesOrder__c.Business__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>