force-app/main/default/objects/TSGADX__Deal__c/fields/EA_SO_Status__c.field-meta.xml
<CustomField>
    <fullName>EA_SO_Status__c</fullName>
    <formula>EA_Sales_Orders__r.Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EA SO Status</label>
    <type>Text</type>
</CustomField>