force-app/main/default/objects/TSGADX__Deal__c/fields/Excess_Delivery_Fees__c.field-meta.xml
<CustomField>
    <fullName>Excess_Delivery_Fees__c</fullName>
    <formula>TSGCFG__Quote__r.Excess_Delivery_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excess Delivery Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>