force-app/main/default/objects/TSGADX__Deal__c/fields/Expense_Control__c.field-meta.xml
<CustomField>
    <fullName>Expense_Control__c</fullName>
    <description>Use to record and export text in this area to proposal template.</description>
    <inlineHelpText>Use to record and export text in this area to proposal template.</inlineHelpText>
    <label>Expense Control</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>