force-app/main/default/objects/TSGADX__Deal__c/fields/Funding_Difference__c.field-meta.xml
<CustomField>
    <fullName>Funding_Difference__c</fullName>
    <formula>Dealer_Funding_Amount__c -  TSGCFG__Total_Lease__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>