force-app/main/default/objects/TSGADX__Deal__c/fields/Gold_MM_Support_Plan__c.field-meta.xml
<CustomField>
    <fullName>Gold_MM_Support_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gold Level Mail Machine Support Plan</description>
    <inlineHelpText>Gold Level Mail Machine Support Plan</inlineHelpText>
    <label>Gold MM Support Plan</label>
    <type>Checkbox</type>
</CustomField>