force-app/main/default/objects/TSGADX__Deal__c/fields/Hardware_Payment__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Payment__c</fullName>
    <formula>IF(TSGCFG__Lease_Rate_Override__c &gt;0.0,IT_Hardware__c * TSGCFG__Lease_Rate_Override__c,  TSGCFG__Lease_Rate_Factor__c*IT_Hardware__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hardware Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>