force-app/main/default/objects/TSGADX__Deal__c/fields/Has_Quote__c.field-meta.xml
<CustomField>
    <fullName>Has_Quote__c</fullName>
    <formula>IF( TSGCFG__Quote__c &lt;&gt; &quot;&quot;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Quote</label>
    <type>Checkbox</type>
</CustomField>