force-app/main/default/objects/TSGADX__Deal__c/fields/Impending_Event__c.field-meta.xml
<CustomField>
    <fullName>Impending_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impending Event</label>
    <type>Checkbox</type>
</CustomField>