force-app/main/default/objects/TSGADX__Deal__c/fields/Install_Delivery_Stage__c.field-meta.xml
<CustomField>
    <fullName>Install_Delivery_Stage__c</fullName>
    <inlineHelpText>Delivery Stage Status from related Installation Process for the deal.</inlineHelpText>
    <label>Install-Delivery Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>