force-app/main/default/objects/TSGADX__Deal__c/fields/IT_Block_Time__c.field-meta.xml
<CustomField>
    <fullName>IT_Block_Time__c</fullName>
    <label>IT Block Time</label>
    <summarizedField>TSGCFG__Deal_Line_Items__c.TSGCFG__Total__c</summarizedField>
    <summaryFilterItems>
        <field>TSGCFG__Deal_Line_Items__c.TSGCFG__Category__c</field>
        <operation>contains</operation>
        <value>Block Time, Install</value>
    </summaryFilterItems>
    <summaryForeignKey>TSGCFG__Deal_Line_Items__c.TSGCFG__Deal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>