force-app/main/default/objects/TSGADX__Deal__c/fields/IT_MRR_Per_User__c.field-meta.xml
<CustomField>
    <fullName>IT_MRR_Per_User__c</fullName>
    <formula>IF(IT_MRR__c / TSGADX__Number_of_Users__c &gt;0,IT_MRR__c / TSGADX__Number_of_Users__c,0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IT MRR Per User</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>