force-app/main/default/objects/TSGADX__Deal__c/fields/IT_Total_Sale__c.field-meta.xml
<CustomField>
    <fullName>IT_Total_Sale__c</fullName>
    <formula>IT_Hardware__c +  MRR_BOT_Sales_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IT Total Sale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>