force-app/main/default/objects/TSGADX__Deal__c/fields/Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync__c</fullName>
    <description>Used for CEO Juice/Quote sync</description>
    <label>Request Sync Date/Time</label>
    <type>DateTime</type>
</CustomField>