force-app/main/default/objects/TSGADX__Deal__c/fields/LBO_Payment_BT__c.field-meta.xml
<CustomField>
    <fullName>LBO_Payment_BT__c</fullName>
    <inlineHelpText>Enter the monthly payment of the buyout for calculation with the remaining term.</inlineHelpText>
    <label>LBO Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>