force-app/main/default/objects/TSGADX__Deal__c/fields/LBO_Term_BT__c.field-meta.xml
<CustomField>
    <fullName>LBO_Term_BT__c</fullName>
    <inlineHelpText>Enter the amount of months remaining for the lease term for buyout.</inlineHelpText>
    <label>LBO Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>