force-app/main/default/objects/TSGADX__Deal__c/fields/Lead_Stage_CyberSec__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage_CyberSec__c</fullName>
    <description>Used for MNS or Cyber Leads vs traditional Equipment</description>
    <label>Lead Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Lead</fullName>
            </value>
            <value>
                <fullName>MOM Lead</fullName>
            </value>
            <value>
                <fullName>OIT Lead</fullName>
            </value>
            <value>
                <fullName>MQL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>