force-app/main/default/objects/TSGADX__Deal__c/fields/Lead_Status_CyberSec__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_CyberSec__c</fullName>
    <description>Used for MNS or Cyber Leads vs traditional Equipment</description>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Stale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>