force-app/main/default/objects/TSGADX__Deal__c/fields/Lease_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Lease_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if all Hardware, Monthly Services, and Annual Subscriptions/Maintenance are to be included in a single monthly payment with hardware lease.</description>
    <inlineHelpText>Check if all Hardware, Monthly Services, and Annual Subscriptions/Maintenance are to be included in a single monthly payment with hardware lease.</inlineHelpText>
    <label>Lease Bundle</label>
    <type>Checkbox</type>
</CustomField>