force-app/main/default/objects/TSGADX__Deal__c/fields/Live_Order__c.field-meta.xml
<CustomField>
    <fullName>Live_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically gets checked after order is closed Won.  Uncheck by Admin Only once order has been completed.</description>
    <inlineHelpText>**Don&apos;t Delete-Rohan**  Automatically gets checked after order is closed Won.  Uncheck by Admin Only once order has been completed.</inlineHelpText>
    <label>Live Order</label>
    <type>Checkbox</type>
</CustomField>