force-app/main/default/objects/TSGADX__Deal__c/fields/LRO_Cost__c.field-meta.xml
<CustomField>
    <fullName>LRO_Cost__c</fullName>
    <formula>TSGCFG__Quote__r.TSGCFG__Leasing_Rate_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the raw dealer rate used for total funding, not the rep rate used in selling calculations.</inlineHelpText>
    <label>LRO Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>