force-app/main/default/objects/TSGADX__Deal__c/fields/Managed_Cloud_Environments__c.field-meta.xml
<CustomField>
    <fullName>Managed_Cloud_Environments__c</fullName>
    <inlineHelpText># of cloud based environments for managed services coverage.</inlineHelpText>
    <label>Managed Cloud Environments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>