force-app/main/default/objects/TSGADX__Deal__c/fields/Managed_Network_Locations__c.field-meta.xml
<CustomField>
    <fullName>Managed_Network_Locations__c</fullName>
    <inlineHelpText># of managed network locations for managed services coverage.</inlineHelpText>
    <label>Managed Network Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>