force-app/main/default/objects/TSGADX__Deal__c/fields/Managed_Servers__c.field-meta.xml
<CustomField>
    <fullName>Managed_Servers__c</fullName>
    <inlineHelpText># of customer servers for managed services coverage.</inlineHelpText>
    <label>Managed Servers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>