force-app/main/default/objects/TSGADX__Deal__c/fields/Manager_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Manager_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Forecast</label>
    <type>Checkbox</type>
</CustomField>