force-app/main/default/objects/TSGADX__Deal__c/fields/MFP_Mono_Monthly_Price__c.field-meta.xml
<CustomField>
    <fullName>MFP_Mono_Monthly_Price__c</fullName>
    <formula>TSGCFG__Quote__r.TSGCFG__MFP_Total_BW_Monthly_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MFP Mono Monthly Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>