force-app/main/default/objects/TSGADX__Deal__c/fields/MFP_Total_Color_Volume__c.field-meta.xml
<CustomField>
    <fullName>MFP_Total_Color_Volume__c</fullName>
    <formula>TSGCFG__Quote__r.TSGCFG__MPSTotalColorVolume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MFP Total Color Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>