force-app/main/default/objects/TSGADX__Deal__c/fields/MIT_Sale__c.field-meta.xml
<CustomField>
    <fullName>MIT_Sale__c</fullName>
    <inlineHelpText>Indicates if items sold in deal contained MIT Hardware/MRR</inlineHelpText>
    <label>MIT Sale</label>
    <summaryFilterItems>
        <field>TSGCFG__Deal_Line_Items__c.TSGCFG__Category__c</field>
        <operation>equals</operation>
        <value>IT Hardware, IT MRR</value>
    </summaryFilterItems>
    <summaryForeignKey>TSGCFG__Deal_Line_Items__c.TSGCFG__Deal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>