force-app/main/default/objects/TSGADX__Deal__c/fields/MM_Hardware_Total__c.field-meta.xml
<CustomField>
    <fullName>MM_Hardware_Total__c</fullName>
    <formula>TSGCFG__Quote__r.MM_Hardware_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MM Hardware Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>