force-app/main/default/objects/TSGADX__Deal__c/fields/MM_Machine_Comp__c.field-meta.xml
<CustomField>
    <fullName>MM_Machine_Comp__c</fullName>
    <description>Hardware commission; either 10% of Standard Price Profit, or if sold over standard price rep will get an additional 50% of that additional Profit.</description>
    <formula>IF( Rep_Margin__c = 0,Total_Hardware_Revenue__c *0.02 , ((Total_Hardware_Revenue__c - TSGCFG__Quote__r.TSGCFG__Total_Rep_Cost__c)*0.10)+( Rep_Margin__c * 0.50))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hardware commission; either 10% of Standard Price Profit, or if sold over standard price rep will get an additional 50% of that additional Profit.</inlineHelpText>
    <label>MM Machine Comp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>