force-app/main/default/objects/TSGADX__Deal__c/fields/MM_Monthly_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>MM_Monthly_Maintenance__c</fullName>
    <formula>TSGCFG__Quote__r.MM_Annual_Maintenance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount of Monthly Dealer Maintenance over and above Meter Rental</inlineHelpText>
    <label>MM Monthly Maintenance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>