force-app/main/default/objects/TSGADX__Deal__c/fields/MM_Monthly_Meter_Rent__c.field-meta.xml
<CustomField>
    <fullName>MM_Monthly_Meter_Rent__c</fullName>
    <formula>TSGCFG__Quote__r.MM_Monthly_Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MM Monthly Meter Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>