force-app/main/default/objects/TSGADX__Deal__c/fields/MM_Monthly_Subscription__c.field-meta.xml
<CustomField>
    <fullName>MM_Monthly_Subscription__c</fullName>
    <formula>TSGCFG__Quote__r.MM_Annual_Subscription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount of Monthly Mail Software or Cloud Subscription $</inlineHelpText>
    <label>MM Monthly Subscription</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>