force-app/main/default/objects/TSGADX__Deal__c/fields/MM_Support_Comp__c.field-meta.xml
<CustomField>
    <fullName>MM_Support_Comp__c</fullName>
    <description>Calculation of Mail Machine Support Comp based on plan sold.</description>
    <formula>IF( Total_Monthly_Services__c = 0,0,
IF( Standard_MM_Support__c  = TRUE, (Total_Hardware_Revenue__c * 0.10),
IF( Silver_MM_Support__c  = TRUE, (Total_Hardware_Revenue__c * 0.12), 
IF( Gold_MM_Support_Plan__c = TRUE, (Total_Hardware_Revenue__c * 0.14),0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculation of Mail Machine Support Comp based on plan sold.</inlineHelpText>
    <label>MM Support Comp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>