force-app/main/default/objects/TSGADX__Deal__c/fields/MM_Total_Monthly__c.field-meta.xml
<CustomField>
    <fullName>MM_Total_Monthly__c</fullName>
    <formula>MM_Monthly_Maintenance__c + MM_Monthly_Meter_Rent__c + MM_Monthly_Subscription__c + ( MM_Hardware_Total__c * TSGCFG__Lease_Rate_Factor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>All Monthly Payments Including Equipment Lease Payment</inlineHelpText>
    <label>MM Total Monthly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>