force-app/main/default/objects/TSGADX__Deal__c/fields/Model_Qty_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Model_Qty_Quoted__c</fullName>
    <inlineHelpText>Qty of models quoted in Total Lease Amount.</inlineHelpText>
    <label>Model Qty Quoted</label>
    <summarizedField>TSGCFG__Deal_Line_Items__c.TSGCFG__Qty__c</summarizedField>
    <summaryFilterItems>
        <field>TSGCFG__Deal_Line_Items__c.TSGCFG__Product_Type__c</field>
        <operation>equals</operation>
        <value>Model</value>
    </summaryFilterItems>
    <summaryForeignKey>TSGCFG__Deal_Line_Items__c.TSGCFG__Deal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>