force-app/main/default/objects/TSGADX__Deal__c/fields/Monthly_Revenue_Goal__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Revenue_Goal__c</fullName>
    <description>Stamp Monthly Revenue Goal - Set at User Record</description>
    <formula>Owner:User.TSGADX__Monthly_Revenue_Goal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Stamp Monthly Revenue Goal - Set at User Record</inlineHelpText>
    <label>Monthly Revenue Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>